second task complete

--- a/CSS/second/index.html
+++ b/CSS/second/index.html
@@ -35,15 +35,14 @@
             <div class="report_detail" id="forecast_report">
                 <h5>SEA FORECAST REPORT</h5>
                 <div>
-                    <h6>WIND SPEED (KNOTS)............... 13</h6>
-                    <h6>WIND GUSTS (KNOTS)............... 14</h6>
+                    <h6>WIND SPEED <span class="light_font">(KNOTS)</span><span class="dotted_line">hello everyone </span>13</h6>
+                    <h6>WIND GUSTS <span class="light_font">(KNOTS)</span>............... 14</h6>
                     <h6>WIND DIRECTION...................... SW</h6>
-                    <h6>WAVE (M)............................... 2.2</h6>
-                    <h6>WAVE PERIOD (S)..................... 12</h6>
+                    <h6>WAVE <span class="light_font">(M)</span>............................... 2.2</h6>
+                    <h6>WAVE PERIOD <span class="light_font">(S)</span>..................... 12</h6>
                     <h6>WAVE DIRECTION...................... SW</h6>
-                    <h6>TEMPERATURE (<SUP>&deg;</SUP>C).................... 23</h6>
-                    <h6>CLOUD COVER (%)..................... &deg;</h6>
-
+                    <h6>TEMPERATURE <span class="light_font">(<SUP>&deg;</SUP>C)</span>.................... 23</h6>
+                    <h6>CLOUD COVER <span class="light_font">(%)</span>..................... &deg;</h6>
                 </div>
             </div>
         </div>
