--- a/CSS/second/index.html
+++ b/CSS/second/index.html
@@ -35,7 +35,7 @@
             <div class="report_detail" id="forecast_report">
                 <h5>SEA FORECAST REPORT</h5>
                 <div>
-                    <h6>WIND SPEED <span class="light_font">(KNOTS)</span><span class="dotted_line">hello everyone </span>13</h6>
+                    <h6>WIND SPEED <span class="light_font">(KNOTS)</span><span class="dotted_line">............... </span>13</h6>
                     <h6>WIND GUSTS <span class="light_font">(KNOTS)</span>............... 14</h6>
                     <h6>WIND DIRECTION...................... SW</h6>
                     <h6>WAVE <span class="light_font">(M)</span>............................... 2.2</h6>
