--- a/CSS/third/index.html
+++ b/CSS/third/index.html
@@ -7,14 +7,40 @@
     <title>Landing Page</title>
 </head>
 <body>
-    <nav>
+    <!-- <nav>
+        <input type="checkbox" id="nav-check">
+        <div class="nav-btn">
+            <label for="nav-check">
+              <span></span>
+              <span></span>
+              <span></span>
+            </label>
+        </div>
         <ul>
             <li><a href="#">The book series</a></li>
             <li><a href="#">Testimonials</a></li>
             <li><a href="#">The Author</a></li>
             <li><a href="#">Free resource</a></li>
         </ul>
-    </nav>
+    </nav> -->
+
+    <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+
+        <div class="nav-links">
+            <a href="#">The book series</a>
+            <a href="#">Testimonials</a>
+            <a href="#">The Author</a>
+            <a href="#">Free resource</a>
+          </div>
+        </div>
 
     <section>
             <h1 style="word-spacing: 10px;">You don't know Javascript</h1>
