fifth task complete

--- a/CSS/fifth/index.html
+++ b/CSS/fifth/index.html
@@ -12,18 +12,34 @@
             <div class="d1">
                 <h3 class="company_name">Collab.</h3>
             </div>
-            <div>
+            <div class="link">
                 <a class="first_link">Home</a>
                 <a>About</a>
                 <a>Services</a>
                 <a>Cont</a>
             </div>
-            <div class="d1">
+            <div class="d1" id="button_1">
                 <button class="started_button">Get started</button>
             </div>
         </div>
 
-        
+        <div class="nav">
+        <input type="checkbox" id="nav-check">
+        <div class="nav-btn">
+          <label for="nav-check">
+            <span></span>
+            <span></span>
+            <span></span>
+          </label>
+        </div>
+
+        <div class="nav-links">
+            <a href="#">The book series</a>
+            <a href="#">Testimonials</a>
+            <a href="#">The Author</a>
+            <a href="#">Free resource</a>
+          </div>
+        </div>
 
         <div class="main_section">
             <div class="s1">
