--- a/CSS/grid/index.html
+++ b/CSS/grid/index.html
@@ -9,29 +9,44 @@
         .grid-container {
             display: grid;
             grid-template-columns: auto auto auto;
-            background-color: red;
+            /* grid-template-columns: repeat(2, auto) 100px; */
+            background-color: rgb(247, 161, 161);
             padding: 10px;
-            column-gap: 20px;
+            column-gap: 2px;
             row-gap: 2px;
-            grid-auto-columns: 1900px;
+            gap: 20px;
+            /* grid-auto-columns: 1900px; */
+            /* grid-auto-flow: column; */
+            width: 40%;
+            height: 40%;
+            justify-content: space-evenly;
         }
 
         .grid-item {
-            background-color: green;
-            border: 2px solid pink;
+            background-color: rgb(164, 231, 164);
+            border: 2px solid black;
             padding: 20px;
             text-align: center;
         }
 
         #demo {
-            grid-column-start: 2;
-            grid-column-end: 4;
+            /* grid-column-start: 2;
+            grid-column-end: 4; */
 
             /* grid-row-start: 1;
             grid-row-end: 3; */
 
-            grid-area: 2 / 1 / span 1 / span 1;
+            /* grid-area: 2 / 1 / span 1 / span 1; */
             /* grid-area: ; */
+
+            /* grid-row-start: 2;
+            grid-row-end: 4; */
+
+            /* grid-row: 2 / span 2; */
+
+            /* grid-column: 2 / span 1; */ 
+
+
         }
     </style>
 </head>
