--- a/Javascript/TO-DO/index.html
+++ b/Javascript/TO-DO/index.html
@@ -11,7 +11,7 @@
         <h1 class="heading">To - Do List</h1>
         <div class="row">
             <input type="text" placeholder="Add Your Text" id="input-box"/>
-            <button id="add-button" onclick="addTask()">ADD</button>
+            <button id="add-button">ADD</button>
         </div>
     <div class="todo">
         <ul id="list-container">
