--- a/Javascript/TO-DO/index.html
+++ b/Javascript/TO-DO/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>TO - DO List</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <h1 class="heading">To - Do List</h1>
-        <div class="row">
-            <input type="text" placeholder="Add Your Text" id="input-box"/>
-            <button id="add-button">ADD</button>
-        </div>
-    <div class="todo">
-        <ul id="list-container">
-
-        </ul>
-    </div>
-    
+      <h1 class="heading">To - Do List</h1>
+      <div class="row">
+        <input type="text" placeholder="Add Your Text" id="input-box" />
+        <button id="add-button" class="button">ADD</button>
+        <button id="edit-button" class="button">SAVE</button>
+      </div>
+      <div class="todo">
+        <ul id="list-container"></ul>
+      </div>
     </div>
     <script src="index.js"></script>
-</body>
+  </body>
 </html>
