--- a/Javascript/Joke-web-app/index.html
+++ b/Javascript/Joke-web-app/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Joke Web App</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-        <button class="btn" onclick="changeJoke()">GET JOKE</button>
-        <p id="joke-que">What was the pumpkin's favorite sport?</p>
-        <p id="joke-ans">Squash.</p>
+      <button class="btn" onclick="changeJoke()">GET JOKE</button>
+      <p id="joke-que">What was the pumpkin's favorite sport?</p>
+      <p id="joke-ans">Squash.</p>
     </div>
-    <script src="index.js">
-    </script>
-</body>
+    <script src="index.js"></script>
+  </body>
 </html>
