event listener added

--- a/CSS/ReactNative_Clone/index.html
+++ b/CSS/ReactNative_Clone/index.html
@@ -52,6 +52,7 @@
                       src="./Images/close-icon.png"
                       width="30px"
                       height="30px"
+                      class="sidebar_close_btn"
                     />
                   </div>
                 </div>
@@ -1018,5 +1019,7 @@
         </footer>
       </div>
     </div>
+
+    <script src="./index.js"></script>
   </body>
 </html>
