event listener added

--- a/CSS/ReactNative_Clone/index.html
+++ b/CSS/ReactNative_Clone/index.html
@@ -65,6 +65,7 @@
                         src="./Images/forward-arrow-icon.png"
                         width="17px"
                         height="17px"
+                        id="arrow_icon"
                       />
                     </div>
                     <ul class="sidebar_dropdown_items">
