event listener added

--- a/CSS/ReactNative_Clone/index.html
+++ b/CSS/ReactNative_Clone/index.html
@@ -44,6 +44,7 @@
                       alt="light-mode-icon"
                       width="35px"
                       height="35px"
+                      class="sidebar_lightMode_icon"
                       style="margin-left: 20px"
                     />
                   </div>
@@ -247,12 +248,12 @@
             </div>
 
             <div class="nativeCode_right">
+              <button class="copy-btn" type="button" aria-label="Copy code to clipboard" title="Copy">
+                  <svg viewBox="0 0 24 24" class="copyButtonIcon_FoOz" width="19px">
+                    <path fill="currentColor" d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"></path>
+                  </svg>
+              </button>
               <div class="nativeCode_right_content">
-                  <button class="copy-btn" type="button" aria-label="Copy code to clipboard" title="Copy">
-                      <svg viewBox="0 0 24 24" class="copyButtonIcon_FoOz" width="19px">
-                        <path fill="currentColor" d="M19,21H8V7H19M19,5H8A2,2 0 0,0 6,7V21A2,2 0 0,0 8,23H19A2,2 0 0,0 21,21V7A2,2 0 0,0 19,5M16,1H4A2,2 0 0,0 2,3V17H4V3H16V1Z"></path>
-                      </svg>
-                  </button>
                 <div class="nativeCode_code_content">
                   <span>
                     <span class="tag keyword">import</span>
