--- a/CSS/ReactNative_Clone/index.html
+++ b/CSS/ReactNative_Clone/index.html
@@ -65,10 +65,10 @@
                       />
                     </div>
                     <ul class="sidebar_dropdown_items">
-                      <li>Guides</li>
-                      <li>Components</li>
-                      <li>APIs</li>
-                      <li>Architecture</li>
+                      <li><a href="#">Guides</a></li>
+                      <li><a href="#">Components</a></li>
+                      <li><a href="#">APIs</a></li>
+                      <li><a href="#">Architecture</a></li>
                     </ul>
                   </div>
                   <a href="#" class="navbar-sidebar-item">Contributing</a>
