--- a/CSS/ReactNative_Clone/index.html
+++ b/CSS/ReactNative_Clone/index.html
@@ -573,7 +573,7 @@
           </div>
         </section>
 
-        <section class="section fastRefresh">
+        <section class=" fastRefresh">
           <div class="fastRefresh_left">
             <video
               muted
