removed unnecessary code

--- a/CSS/ReactNative_Clone/index.html
+++ b/CSS/ReactNative_Clone/index.html
@@ -124,7 +124,7 @@
             </a>
             <div class="searchBox">
               <button type="button" class="searchButton">
-                <span>
+                <span class="searchBox_search_icon">
                   <img
                     src="./Images/search-icon.png"
                     width="20px"
@@ -132,7 +132,8 @@
                   />
                   <span class="seach_placeholder">Search</span>
                 </span>
-                <span>
+                
+                <span class="searchBox_img">
                   <img
                     src="./Images/ctrl-key-icon.png"
                     width="30px"
